🔄 Remove: Delete header text from hero section

--- a/index.html
+++ b/index.html
@@ -1656,6 +1656,7 @@
   <section id="hero" class="hero">
     <div class="hero-content" data-aos="fade-up">
       <p class="hero-subtitle">Семейный отдых на озере Алаколь</p>
+      <h1 class="hero-title">БАЗА ОТДЫХА ПЕЛИКАН АЛАКОЛЬ<br>КОМФОРТ ДЛЯ ИДЕАЛЬНОГО ОТДЫХА</h1>
       <p class="hero-description">Более 5000 деревьев, чистый пляж, комфортные домики<br>и незабываемые впечатления для всей семьи</p>
     </div>
   </section>
