--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       --darker: #0f1419;
       --light: #ffffff;
       --gray: #8b95a5;
+      --hero-bg: url('https://images.unsplash.com/photo-1505142468610-359e7d316be0?w=1920');
     }
 
     body {
@@ -132,7 +133,7 @@
       justify-content: center;
       text-align: center;
       padding: 8rem 2rem 4rem;
-      background: linear-gradient(180deg, rgba(26, 35, 50, 0.8) 0%, rgba(15, 20, 25, 0.95) 100%), url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1920') center/cover no-repeat;
+      background: linear-gradient(180deg, rgba(26, 35, 50, 0.8) 0%, rgba(15, 20, 25, 0.95) 100%), var(--hero-bg) center/cover no-repeat fixed;
       background-attachment: fixed;
     }
 
@@ -1661,7 +1662,25 @@
     </div>
   </section>
 
-  
+  <section class="features">
+    <div class="features-grid">
+      <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
+        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800" alt="Пляж">
+        <div class="feature-overlay">
+          <h2 class="feature-title">ПЛЯЖ</h2>
+          <p class="feature-description">Чистый галечный берег озера Алаколь с прозрачной водой и комфортным входом в воду</p>
+        </div>
+      </div>
+
+      <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
+        <img src="https://images.unsplash.com/photo-1576013551627-0cc20b96c2a7?w=800" alt="Бассейн">
+        <div class="feature-overlay">
+          <h2 class="feature-title">БАССЕЙНЫ</h2>
+          <p class="feature-description">Два бассейна с подогревом, детское отделение и джакузи для идеального отдыха</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section id="gallery" class="gallery-section">
     <div class="gallery-header">
