--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="База отдыха Пеликан на озере Алаколь - семейный отдых, бассейны, анимация, комфортные домики">
+# <meta name="description" content="База отдыха Пеликан на озере Алаколь - семейный отдых, бассейны, анимация, комфортные домики">
   <title>База отдыха Пеликан Алаколь</title>
   
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
